buy_shift added to week_calc

--- a/my_ride/templates/week_page.html
+++ b/my_ride/templates/week_page.html
@@ -39,6 +39,10 @@
                         <td>{{ tips }}</td>
                     </tr>
                     <tr>
+                        <td>Траты на смену</td>
+                        <td>{{ buy }}</td>
+                    </tr>
+                    <tr>
                         <td>Покуп. смены</td>
                         <td>{{ saved_tax }}</td>
                     </tr>
