--- a/my_ride/templates/report_done.html
+++ b/my_ride/templates/report_done.html
@@ -24,6 +24,7 @@
         <a href="{% url 'new_ride'%}" role="button" class="btn btn-info">Добавить еще заказ</a>
         <a href="{% url 'rides_all'%}"role="button" class="btn btn-info" >Посмотреть все заказы</a>
         <a href="{% url 'total_day_driver' balance_d.driver balance_d.day %}"role="button" class="btn btn-info" >Посмотреть отчет</a>
+         <a href="{% url 'week_reports' week %}" role="button" class="btn btn-info">Отчеты за неделю</a>
     </div>
 </div>
 
