--- a/my_ride/templates/ride_detail.html
+++ b/my_ride/templates/ride_detail.html
@@ -6,17 +6,20 @@
 
 <div class="row">
     <div class="col-md-8 mx-auto">
-        <h3>Детали заказа {{ ride.number }}:</h3>
+        <h3>Детали заказа {{ ride.number }} от {{ ride.shift }}:</h3>
         <hr>
         Сумма: {{ ride.price }}<br>
         Водитель: {{ ride.driver }}<br>
         Автомобиль: {{ ride.car }}<br>
         Наличные: {{ ride.cash }}<br>
+        ЗСД: {{ ride.toll }}<br>
+        Покуп.смены: {{ ride.save_tax }}<br>
+        Чаевые: {{ ride.tip }}<br>
         Коммент: {{ ride.comment }}<br>
         <hr>
     </div>
     <div class="col-md-8 mx-auto">
-        <a href="{% url 'ride_change' ride.number %}" role="button" class="btn btn-warning">Корректировка заказа</a>
+        <a href="{% url 'ride_change' ride.number ride.driver %}" role="button" class="btn btn-warning">Корректировка заказа</a>
         <a href="{% url 'x_ride' ride.number %}" role="button" class="btn btn-danger">Удалить заказ</a>
         <a href="{% url 'new_ride' %}" role="button" class="btn btn-secondary">Добавить еще заказ</a>
         <a href="{% url 'rides_all' %}" role="button" class="btn btn-info">Посмотреть все заказы</a>
