--- a/my_ride/templates/total/totalday_driver.html
+++ b/my_ride/templates/total/totalday_driver.html
@@ -122,7 +122,7 @@
             <tr >
                 <td>{{ obj.shift.week }}</td>
                 <td>{{ obj.shift }}</td>
-                <td><a href="{% url 'ride_detail' obj.number%}">{{ obj.number }}</a></td>
+                <td><a href="{% url 'ride_detail' obj.number obj.driver %}">{{ obj.number }}</a></td>
                 <td>{{ obj.price }}</td>
                 <td>{{ obj.cash }}</td>
                 <td>{{ obj.driver }}</td>
