--- a/my_ride/templates/week_page.html
+++ b/my_ride/templates/week_page.html
@@ -82,7 +82,10 @@
             </div>
         </div>
     </div>
-    <div class="col-md-10 mx-auto mb-3">
+</div>
+<div class="row mt-5">
+    <div class="col-md-4 mx-auto mb-3">
+        <h3>Отчеты по сменам:</h3>
         <div>
             {% for key, value in weekly_reports %}
                 {{ key }}
@@ -94,10 +97,30 @@
                 {% endif %}
                 </div>
                 <hr>
-
             {% endfor %}
         </div>
     </div>
+    <div class="col-md-4 mx-auto mb-3">
+        <h3>План по сменам:</h3>
+        <div>
+            {% for key, value in weekly_plans %}
+                {{ key }}
+                <div>
+                {% if value %}
+                    {% for i in value %}
+                    <div class="btn-group-vertical">
+                        <a href="{% url 'total_day_driver' i.plan_driver i.plan_day %}" role="button" class="btn btn-secondary">{{ i.plan_car }}<br>{{ i.plan_driver }}</a>
+                        <a href="{% url 'del_plan' i.plan_driver i.plan_day %}" role="button" class="btn btn-danger mr-1">X</a>
+                    </div>
+                    {% endfor %}
+                {% endif %}
+                </div>
+                <hr>
+            {% endfor %}
+        </div>
+    </div>
+</div>
+<div class="row">
     <div class="col-md-8 mx-auto">
         <a href="{% url 'plan' week %}" role="button" class="btn btn-primary">Запланировать смену</a>
         <a href="{% url 'new_ride'%}" role="button" class="btn btn-info">Добавить заказ</a>
