--- a/my_ride/templates/404_plan.html
+++ b/my_ride/templates/404_plan.html
@@ -12,6 +12,7 @@
         <a href="{% url 'new_ride'%}" role="button" class="btn btn-info">Добавить заказ</a>
         <a href="{% url 'rides_all'%}"role="button" class="btn btn-info" >Посмотреть все заказы</a>
         <a href="{% url 'week_reports' week %}" role="button" class="btn btn-info">Отчеты за неделю</a>
+        <a href="{% url 'plan_all' week %}" role="button" class="btn btn-info">План на неделю</a>
     </div>
 </div>
 
