all rides total views editted

--- a/my_ride/templates/total/totalday_driver.html
+++ b/my_ride/templates/total/totalday_driver.html
@@ -48,7 +48,7 @@
                         <td>{{ report.s_tax }}</td>
                     </tr>
                     <tr>
-                        <td>Доп.комиссия</td>
+                        <td>Доп.комиссия&nbsp;&nbsp;</td>
                         <td>{{ report.x_tax }}</td>
                     </tr>
                      <tr>
@@ -95,6 +95,10 @@
                     <tr>
                         <td>Смена</td>
                         <td>{{ report.buy_s }}</td>
+                    </tr>
+                    <tr>
+                        <td>Коммент&nbsp;&nbsp;</td>
+                        <td>{{ report.comment }}</td>
                     </tr>
                 </table>
             </div>
