--- a/my_ride/templates/total/totalday_car.html
+++ b/my_ride/templates/total/totalday_car.html
@@ -36,7 +36,7 @@
             <tr >
                 <td><a href="#" >{{ obj.shift.week }}</a></td>
                 <td><a href="#" >{{ obj.shift }}</a></td>
-                <td><a href="{% url 'ride_detail' obj.number%}">{{ obj.number }}</a></td>
+                <td><a href="{% url 'ride_detail' obj.number obj.driver %}">{{ obj.number }}</a></td>
                 <td>{{ obj.price }}</td>
                 <td>{{ obj.cash }}</td>
                 <td>{{ obj.driver }}</td>
