--- a/templates/secret_page.html
+++ b/templates/secret_page.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %} Секрет {% endblock %}
+
 {% block content %}
     <div class="row">
         <div class="col-md-8 mx-auto mb-3">
