some logic improved

--- a/my_ride/templates/add_ride.html
+++ b/my_ride/templates/add_ride.html
@@ -19,6 +19,7 @@
     <div class="col-md-8 mx-auto">
         <hr>
         <a href="{% url 'rides_all'%}" role="button" class="btn btn-info">Посмотреть все заказы</a>
+        <a href="{% url 'week_reports' week %}" role="button" class="btn btn-info">Отчеты за неделю</a>
     </div>
 </div>
 
