--- a/my_ride/templates/404_report.html
+++ b/my_ride/templates/404_report.html
@@ -5,14 +5,13 @@
 {% block content %}
 <div class="row">
     <div class="col-md-10 mx-auto mb-3">
-        Невозможно запланировать смену:<br>
-        {{ warning }}
+        {{ warning }}<br>
+        Воспользуйтесь корректировкой отчета!
     </div>
     <div class="col-md-8 mx-auto">
-        <a href="{% url 'new_ride' week%}" role="button" class="btn btn-info">Добавить заказ</a>
+        <a href="{% url 'new_ride' week %}" role="button" class="btn btn-info">Добавить заказ</a>
         <a href="{% url 'rides_all'%}"role="button" class="btn btn-info" >Посмотреть все заказы</a>
         <a href="{% url 'week_reports' week %}" role="button" class="btn btn-info">Отчеты за неделю</a>
-        <a href="{% url 'plan_all' week %}" role="button" class="btn btn-info">План на неделю</a>
     </div>
 </div>
 
