--- a/my_ride/templates/ride_done.html
+++ b/my_ride/templates/ride_done.html
@@ -13,9 +13,9 @@
         Наличные: {{ ride.cash }}<br>
     </div>
     <div class="col-md-8 mx-auto">
-        <a href="{% url 'new_ride'%}" role="button" class="btn btn-info">Добавить еще заказ</a>
+        <a href="{% url 'new_ride' week %}" role="button" class="btn btn-info">Добавить еще заказ</a>
         <a href="{% url 'rides_all'%}"role="button" class="btn btn-info" >Посмотреть все заказы</a>
-        <a href="{% url 'total_day_driver' ride.driver ride.shift %}" role="button" class="btn btn-info">Вернуться к отчету</a>
+        <a href="{% url 'total_day_driver' ride.driver ride.shift %}" role="button" class="btn btn-info">Отчет за смену</a>
     </div>
 </div>
 
