--- a/my_ride/templates/start_page.html
+++ b/my_ride/templates/start_page.html
@@ -10,12 +10,12 @@
             <tr >
             {% for obj in weeks %}
                 <td><a href="{% url 'week_reports' obj.week %}" role="button" class="btn btn-success">{{obj.week}}</a></td>
+                <td><a href="{% url 'new_ride' obj.week %}" role="button" class="btn btn-info">Добавить заказ</a></td>
             {% endfor %}
             </tr>
         </table>
     </div>
     <div class="col-md-8 mx-auto">
-        <a href="{% url 'new_ride'%}" role="button" class="btn btn-info">Добавить заказ</a>
         <a href="{% url 'rides_all'%}"role="button" class="btn btn-info" >Посмотреть все заказы</a>
     </div>
 </div>
