--- a/my_ride/templates/week_page.html
+++ b/my_ride/templates/week_page.html
@@ -126,7 +126,7 @@
 <div class="row">
     <div class="col-md-8 mx-auto">
         <a href="{% url 'plan' week %}" role="button" class="btn btn-primary">Запланировать смену</a>
-        <a href="{% url 'new_ride'%}" role="button" class="btn btn-info">Добавить заказ</a>
+        <a href="{% url 'new_ride' week %}" role="button" class="btn btn-info">Добавить заказ</a>
         <a href="{% url 'rides_all'%}"role="button" class="btn btn-info" >Посмотреть все заказы</a>
         <a href="{% url 'week_reports' week %}" role="button" class="btn btn-info">Отчеты за неделю</a>
         <a href="{% url 'start'%}" role="button" class="btn btn-info">Все недели</a>
