--- a/templates/base.html
+++ b/templates/base.html
@@ -12,18 +12,19 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light" style="background-color: lightcoral;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#" id="brand">Твой Парк</a>
+                <a class="navbar-brand" href="{% url 'start'%}" id="brand">Твой Парк</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto">
+                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Search">
+                        <button class="btn btn-outline-secondary" type="submit">Найти</button>
+                    </form>
+                    <ul class="navbar-nav mr-auto">
                         {% if user.is_authenticated %}
                         <li class="nav-item ">
-                            <a class="nav-link" href="{% url 'secret'%}" >Секрет</a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link" href="{% url 'secret2'%}" >Секрет2</a>
+                            <a class="nav-link" href="{% url 'park_info'%}">Инфо</a>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link" href="{% url 'password_change'%}" >Сменить пароль</a>
@@ -40,43 +41,39 @@
                         </li>
                         {% endif %}
                     </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Search">
-                        <button class="btn btn-outline-secondary" type="submit">Найти</button>
-                    </form>
                 </div>
             </div>
         </nav>
     </div>
     <div class="container">
-    <div class="row">
-      <div class="col-8 mx-auto my-3">
-        {% if messages %}
-            {% for message in messages %}
-              {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
-                <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                  {{ message }}
-                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-              {% else %}
-                <div class="alert alert-success alert-dismissible fade show" role="alert">
-                  {{ message }}
-                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-              {% endif %}
-            {% endfor %}
-        {% endif %}
-      </div>
-      {% if user.is_authenticated %}
-      <div class="col-md-3 offset-md-7">
-          <strong>Вы вошли как:   <span style="color: green;">{{ user.username }}</span></strong><br>
-      {% else %}
-      <div class="col-md-3 offset-md-7">
-          <strong><span style="color: red;">Вы не авторизованы</span></strong><br>
-      {% endif %}
-      </div>
+        <div class="row">
+            {% if user.is_authenticated %}
+            <div class="col-md-3 offset-md-8">
+                <strong>Вы вошли как:   <span style="color: green;">{{ user.username }}</span></strong><br>
+            {% else %}
+            <div class="col-md-3 offset-md-8">
+                <strong><span style="color: red;">Вы не авторизованы</span></strong><br>
+            {% endif %}
+            </div>
+            <div class="col-8 mx-auto my-3">
+            {% if messages %}
+                {% for message in messages %}
+                    {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                    {% else %}
+                        <div class="alert alert-success alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
+            </div>
+        </div>
     </div>
-  </div>
     <div>
         <p>
             {% block content %}{% endblock %}
