--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -11,7 +11,9 @@
                 {% csrf_token %}
                 {{ form.as_p }}
             </div>
-            <button type="submit" class="btn btn-info col-md-2">Зарегистрировать</button>
+            <div class="d-grid gap-2 d-md-block">
+                <button type="submit" class="btn btn-info">Зарегистрировать</button>
+            </div>
         </form>
     </div>
     <div class="col-md-8 mx-auto">
